# parametric_stl

./: README.md  parametric_stl.code-workspace
projects/parametric_stl/: .algokit.toml  .copier-answers.yml  README.md  head.stl  pyproject.toml
projects/parametric_stl/smart_contracts/: README.md
projects/parametric_stl/smart_contracts/artifacts/stl_create/: ParametricSTL.approval.teal  ParametricSTL.arc32.json  ParametricSTL.clear.teal  client.py
projects/parametric_stl/smart_contracts/stl_create/: contract.py  deploy_config.py
